[gd_scene load_steps=6 format=2]

[ext_resource path="res://Textures/Cave_Stage_Background.png" type="Texture" id=1]
[ext_resource path="res://RaubFont.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/MainMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 2 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
zoom = Vector2( 0.9, 0.9 )

[node name="Title" type="Label" parent="."]
margin_left = 62.009
margin_top = 90.0
margin_right = 147.009
margin_bottom = 106.0
rect_scale = Vector2( 4, 4 )
custom_fonts/font = SubResource( 1 )
text = "space run"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Node2D" parent="."]
visible = false

[node name="Button" type="Button" parent="Start"]
margin_left = 540.0
margin_top = 100.0
margin_right = 740.0
margin_bottom = 140.0
custom_fonts/font = SubResource( 2 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Start"]
margin_left = 540.0
margin_top = 170.0
margin_right = 740.0
margin_bottom = 210.0
custom_fonts/font = SubResource( 2 )
text = "select level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="Start"]
margin_left = 540.0
margin_top = 240.0
margin_right = 740.0
margin_bottom = 280.0
custom_fonts/font = SubResource( 2 )
text = "How to play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="Start"]
margin_left = 540.0
margin_top = 310.0
margin_right = 740.0
margin_bottom = 350.0
custom_fonts/font = SubResource( 2 )
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelSelect" type="Node2D" parent="."]
visible = false

[node name="Level1" type="Button" parent="LevelSelect"]
margin_left = 540.0
margin_top = 100.0
margin_right = 740.0
margin_bottom = 140.0
custom_fonts/font = SubResource( 2 )
text = "Level 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level2" type="Button" parent="LevelSelect"]
margin_left = 540.0
margin_top = 200.0
margin_right = 740.0
margin_bottom = 240.0
custom_fonts/font = SubResource( 2 )
text = "Level 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level3" type="Button" parent="LevelSelect"]
margin_left = 540.0
margin_top = 300.0
margin_right = 740.0
margin_bottom = 340.0
custom_fonts/font = SubResource( 2 )
text = "Level 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="LevelSelect"]
margin_left = 540.0
margin_top = 150.0
margin_right = 635.0
margin_bottom = 190.0
custom_fonts/font = SubResource( 1 )
text = "Best time: 
Points:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="LevelSelect"]
margin_left = 540.0
margin_top = 250.0
margin_right = 635.0
margin_bottom = 290.0
custom_fonts/font = SubResource( 1 )
text = "Best time: 
Points:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="LevelSelect"]
margin_left = 540.0
margin_top = 350.0
margin_right = 635.0
margin_bottom = 390.0
custom_fonts/font = SubResource( 1 )
text = "Best time: 
Points:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BestTime1" type="Label" parent="LevelSelect"]
margin_left = 635.0
margin_top = 150.0
margin_right = 730.0
margin_bottom = 166.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BestTime2" type="Label" parent="LevelSelect"]
margin_left = 635.0
margin_top = 250.0
margin_right = 730.0
margin_bottom = 266.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BestTime3" type="Label" parent="LevelSelect"]
margin_left = 635.0
margin_top = 350.0
margin_right = 730.0
margin_bottom = 366.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Points2" type="Label" parent="LevelSelect"]
margin_left = 635.0
margin_top = 268.0
margin_right = 730.0
margin_bottom = 284.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Points3" type="Label" parent="LevelSelect"]
margin_left = 635.0
margin_top = 368.0
margin_right = 730.0
margin_bottom = 384.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Points1" type="Label" parent="LevelSelect"]
margin_left = 635.0
margin_top = 168.0
margin_right = 730.0
margin_bottom = 184.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button8" type="Button" parent="LevelSelect"]
margin_left = 540.0
margin_top = 400.0
margin_right = 740.0
margin_bottom = 440.0
custom_fonts/font = SubResource( 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HowTo" type="Node2D" parent="."]

[node name="Button5" type="Button" parent="HowTo"]
margin_left = 540.0
margin_top = 350.0
margin_right = 740.0
margin_bottom = 390.0
custom_fonts/font = SubResource( 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HowTo"]
margin_left = 493.36
margin_top = 92.4037
margin_right = 702.36
margin_bottom = 184.404
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 1 )
text = "Controls:
\"a/d\" - choose direction
\"space\" - gain speed
\"w\" - jump
\"r\" - restart level"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Node2D" parent="."]
visible = false

[node name="Button6" type="Button" parent="Credits"]
margin_left = 535.0
margin_top = 400.0
margin_right = 735.0
margin_bottom = 440.0
custom_fonts/font = SubResource( 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Credits"]
margin_left = 421.674
margin_top = 52.7961
margin_right = 705.674
margin_bottom = 258.796
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 1 )
text = "Game made by Und3rc0ver

assets made by mattwalkden

background made by heran ze

font made by chinafreak

music: eric skiff - underclocked

sound from freesound.org"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Start/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Start/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Start/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Start/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="LevelSelect/Level1" to="." method="_on_Level1_pressed"]
[connection signal="pressed" from="LevelSelect/Level2" to="." method="_on_Level2_pressed"]
[connection signal="pressed" from="LevelSelect/Level3" to="." method="_on_Level3_pressed"]
[connection signal="pressed" from="LevelSelect/Button8" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="HowTo/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Credits/Button6" to="." method="_on_Button5_pressed"]
